# processintel

./: Contributing.md  LICENSE  README.md  SETUP.md  config.py  flake.nix  module.nix  package.nix  pyproject.toml  requirements.txt  streamlit_app.py
.forgejo/workflows/: black-format-check.yml  build.yml  unittest.yml
.github/workflows/: build.yml
app/: __main__.py  config.py  logger.py  streamlit_app.py
app/analysis/: detection_model.py  predictions_model.py
app/components/: buttons.py  number_input_slider.py
app/converters/: bpmn_converter.py  csv_to_xes_converter.py  dfg_converter.py  petri_net_converter.py  xes_to_csv_converter.py
app/graphs/: cuts.py  dfg.py  petri_net.py
app/io_operations/: export_operations.py  import_operations.py
app/logs/: splits_imf.py
app/mining_algorithms/: alpha_mining.py  base_mining.py  fuzzy_mining.py  genetic_mining.py  heuristic_mining.py  inductive_mining.py  inductive_mining_infrequent.py  mining_interface.py
app/pages/: imprint.py  main_app.py  privacy.py
app/transformations/: dataframe_transformations.py
converters/: bpmn_converter.py  dfg_converter.py  inductive_converter.py  petri_net_converter.py
docs/: EXTENDING.md
docs/algorithms/: inductive_miner_infrequent.md
graphs/: petri_net.py
graphs/visualization/: __init__.py  base_graph.py  bpmn_graph.py  directly_follows_graph.py  petri_net_graph.py
mining_algorithms/: alpha_mining.py  base_mining.py  fuzzy_mining.py  genetic_mining.py  heuristic_mining.py  inductive_mining.py
tests/: __init__.py  test_requirements.txt
tests/analysis/: __init__.py  (+1 more)
(+75 files in other folders)
